tests/paczka1/small_fuzzy/35829283.err
Error in line 1: h0yIA S549 73,9
Error in line 9: SAZhzXQ A348 11,11
Error in line 8: SAZhzXQ A866 10,9
Error in line 2: t4AB5uMu5 A866 25,6
